# vk_mini_path_tracer

./: .gitignore  CMakeLists.txt  LICENSE  NVIDIA_CLA_v1.0.1.docx  README.md
4_commands/: main.cpp
_edit/: main.cpp  (+1 more)
vk_mini_path_tracer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  vk_mini_path_tracer.sln
vk_mini_path_tracer/_edit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer__edit.sln  vk_mini_path_tracer__edit.vcxproj  vk_mini_path_tracer__edit.vcxproj.filters
vk_mini_path_tracer/checkpoints/10_mesh_data/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_10_mesh_data.sln  vk_mini_path_tracer_10_mesh_data.vcxproj  vk_mini_path_tracer_10_mesh_data.vcxproj.filters
vk_mini_path_tracer/checkpoints/11_specular/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_11_specular.sln  vk_mini_path_tracer_11_specular.vcxproj  vk_mini_path_tracer_11_specular.vcxproj.filters
vk_mini_path_tracer/checkpoints/12_antialiasing/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_12_antialiasing.sln  vk_mini_path_tracer_12_antialiasing.vcxproj  vk_mini_path_tracer_12_antialiasing.vcxproj.filters
vk_mini_path_tracer/checkpoints/1_hello_vulkan/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_1_hello_vulkan.sln  vk_mini_path_tracer_1_hello_vulkan.vcxproj  vk_mini_path_tracer_1_hello_vulkan.vcxproj.filters
vk_mini_path_tracer/checkpoints/2_extensions/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_2_extensions.sln  vk_mini_path_tracer_2_extensions.vcxproj  vk_mini_path_tracer_2_extensions.vcxproj.filters
vk_mini_path_tracer/checkpoints/3_memory/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_3_memory.sln  vk_mini_path_tracer_3_memory.vcxproj  vk_mini_path_tracer_3_memory.vcxproj.filters
vk_mini_path_tracer/checkpoints/4_commands/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_4_commands.sln  vk_mini_path_tracer_4_commands.vcxproj  vk_mini_path_tracer_4_commands.vcxproj.filters
vk_mini_path_tracer/checkpoints/5_write_image/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_5_write_image.sln  vk_mini_path_tracer_5_write_image.vcxproj  vk_mini_path_tracer_5_write_image.vcxproj.filters
vk_mini_path_tracer/checkpoints/6_compute_shader/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_6_compute_shader.sln  vk_mini_path_tracer_6_compute_shader.vcxproj  vk_mini_path_tracer_6_compute_shader.vcxproj.filters
vk_mini_path_tracer/checkpoints/7_descriptors/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_7_descriptors.sln  vk_mini_path_tracer_7_descriptors.vcxproj  vk_mini_path_tracer_7_descriptors.vcxproj.filters
vk_mini_path_tracer/checkpoints/8_ray_tracing/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_8_ray_tracing.sln  vk_mini_path_tracer_8_ray_tracing.vcxproj  vk_mini_path_tracer_8_ray_tracing.vcxproj.filters
vk_mini_path_tracer/checkpoints/9_intersection/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_9_intersection.sln  vk_mini_path_tracer_9_intersection.vcxproj  vk_mini_path_tracer_9_intersection.vcxproj.filters
vk_mini_path_tracer/checkpoints/e10_materials/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_e10_materials.sln  vk_mini_path_tracer_e10_materials.vcxproj  vk_mini_path_tracer_e10_materials.vcxproj.filters
vk_mini_path_tracer/checkpoints/e11_rt_pipeline_1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_e11_rt_pipeline_1.sln  vk_mini_path_tracer_e11_rt_pipeline_1.vcxproj  vk_mini_path_tracer_e11_rt_pipeline_1.vcxproj.filters
vk_mini_path_tracer/checkpoints/e11_rt_pipeline_2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_e11_rt_pipeline_2.sln  vk_mini_path_tracer_e11_rt_pipeline_2.vcxproj  vk_mini_path_tracer_e11_rt_pipeline_2.vcxproj.filters
vk_mini_path_tracer/checkpoints/e11_rt_pipeline_3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_e11_rt_pipeline_3.sln  vk_mini_path_tracer_e11_rt_pipeline_3.vcxproj  vk_mini_path_tracer_e11_rt_pipeline_3.vcxproj.filters
vk_mini_path_tracer/checkpoints/e1_gaussian/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer_e1_gaussian.sln  vk_mini_path_tracer_e1_gaussian.vcxproj  vk_mini_path_tracer_e1_gaussian.vcxproj.filters
vk_mini_path_tracer/cmake_build/: CMakeCache.txt
vk_mini_path_tracer/nvpro_core/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  nvpro_core.vcxproj  nvpro_core.vcxproj.filters
vk_mini_path_tracer/shaders/: raytrace.comp.glsl
vk_mini_path_tracer/vk_mini_path_tracer/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  vk_mini_path_tracer.vcxproj  vk_mini_path_tracer.vcxproj.filters
(+203 files in other folders)
